deploy: QuantumPL/site@45d5f9168b069f0b64b1db1cc87b79d8ad65d3d3

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 (2021).
 <a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a>.
 <p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://dalspace.library.dal.ca/bitstream/handle/10222/80771/FranciscoRios2021.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rios2021/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://dalspace.library.dal.ca/handle/10222/80771 target=_blank rel=noopener>
+URL
 </a>
 </p>
 </div>
@@ -287,13 +287,13 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/Formal-Verification/ style=font-size:1.7842568972904107rem>Formal Verification</a>
+<a href=/bib/tag/Formal-verification/ style=font-size:1.7842568972904107rem>Formal verification</a>
 <a href=/bib/tag/Pre-and-Postconditions/ style=font-size:.7rem>Pre- and Postconditions</a>
 <a href=/bib/tag/Program-Proof/ style=font-size:1.1797913203571053rem>Program Proof</a>
 <a href=/bib/tag/Program-Specifications/ style=font-size:.7rem>Program Specifications</a>
 <a href=/bib/tag/Programming-Languages/ style=font-size:1.5202086796428946rem>Programming Languages</a>
-<a href=/bib/tag/Quantum-Computing/ style=font-size:1.7842568972904107rem>Quantum Computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.1797913203571053rem>quantum programming</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.7842568972904107rem>Quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.5202086796428946rem>quantum programming</a>
 <a href=/bib/tag/Type-Systems/ style=font-size:1.1797913203571053rem>Type Systems</a>
 </div>
 </div>
