--- a/publication/Hietala2021/index.html
+++ b/publication/Hietala2021/index.html
@@ -151,9 +151,9 @@ Journal article
 <div class=article-style></div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
-<a class="badge badge-light" href=/bib/tag/Formal-Verification/>Formal Verification</a>
+<a class="badge badge-light" href=/bib/tag/Formal-verification/>Formal verification</a>
 <a class="badge badge-light" href=/bib/tag/Certified-Compilation/>Certified Compilation</a>
-<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/Circuit-Optimization/>Circuit Optimization</a>
 </div>
 <div class="article-widget content-widget-hr">
@@ -161,9 +161,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
-<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
 </ul>
 </div>
 </div>
