--- a/publication/Rand2018a/index.html
+++ b/publication/Rand2018a/index.html
@@ -130,7 +130,7 @@ Thesis
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>Publicly Accessible Penn Dissertations. 3175. See Ch. 3 for "A Brief History of Quantum Programming and Verification", which is an excellent recent survey of the area</p>
+<div class=article-style><p>Publicly Accessible Penn Dissertations. 3175. See Ch. 3 for "A Brief History of Quantum Programming and Verification", which is an excellent recent survey of the area.</p>
 </div>
 </div>
 </div>
