--- a/publication/Zhou2021/index.html
+++ b/publication/Zhou2021/index.html
@@ -151,7 +151,7 @@ Conference paper
 <div class=article-style></div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/formal-logic/>formal logic</a>
-<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/substructural-logic/>substructural logic</a>
 <a class="badge badge-light" href=/bib/tag/separating-conjunction/>separating conjunction</a>
 <a class="badge badge-light" href=/bib/tag/separable-quantum-states/>separable quantum states</a>
@@ -165,11 +165,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
 <li><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></li>
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
-<li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 </ul>
 </div>
 </div>
