--- a/publication/index.html
+++ b/publication/index.html
@@ -181,11 +181,11 @@ This thesis contains contributions to the mathematical foundations of quantum pr
 </div>
 </div>
 <div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://dalspace.library.dal.ca/bitstream/handle/10222/80771/FranciscoRios2021.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rios2021/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://dalspace.library.dal.ca/handle/10222/80771 target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
@@ -1246,9 +1246,6 @@ The design and compilation of correct, efficient quantum circuits is integral to
 <div class=btn-links>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Amy2019a/cite.bib>
 Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/978-3-030-21500-2_6 target=_blank rel=noopener>
-DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=http://hdl.handle.net/10012/14480 target=_blank rel=noopener>
 URL
