--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -150,14 +150,16 @@ Conference paper
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/deductive-verification/>deductive verification</a>
 <a class="badge badge-light" href=/bib/tag/quantum-programming/>quantum programming</a>
-<a class="badge badge-light" href=/bib/tag/quantum-circuits/>quantum circuits</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-circuits/>Quantum circuits</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 <li><a href=/bib/publication/Ying2017/>Invariants of Quantum Programs: Characterisations and Generation</a></li>
 <li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
+<li><a href=/bib/publication/Green2010/>Towards a Formally Verified Functional Quantum Programming Language</a></li>
 </ul>
 </div>
 </div>
