--- a/publication/Green2010/index.html
+++ b/publication/Green2010/index.html
@@ -131,6 +131,23 @@ Thesis
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/quantum-programming/>quantum programming</a>
+<a class="badge badge-light" href=/bib/tag/computer-programming/>computer programming</a>
+<a class="badge badge-light" href=/bib/tag/computer-languages/>computer languages</a>
+<a class="badge badge-light" href=/bib/tag/haskell/>haskell</a>
+<a class="badge badge-light" href=/bib/tag/monadic-structure/>monadic structure</a>
+<a class="badge badge-light" href=/bib/tag/quantum-io-monad/>quantum io monad</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
+<li><a href=/bib/publication/Ying2017/>Invariants of Quantum Programs: Characterisations and Generation</a></li>
+<li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
+<li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
