--- a/publication/Hietala2021a/index.html
+++ b/publication/Hietala2021a/index.html
@@ -150,18 +150,18 @@ Conference paper
 <div class=space-below></div>
 <div class=article-style></div>
 <div class=article-tags>
-<a class="badge badge-light" href=/bib/tag/Formal-Verification/>Formal Verification</a>
-<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Formal-verification/>Formal verification</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/Proof-Engineering/>Proof Engineering</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
-<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
 </ul>
 </div>
 </div>
