--- a/publication/Li2017/index.html
+++ b/publication/Li2017/index.html
@@ -157,6 +157,7 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 <li><a href=/bib/publication/Ying2017/>Invariants of Quantum Programs: Characterisations and Generation</a></li>
+<li><a href=/bib/publication/Green2010/>Towards a Formally Verified Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 </ul>
 </div>
