--- a/publication/Rand2020/index.html
+++ b/publication/Rand2020/index.html
@@ -152,7 +152,7 @@ Conference paper
 <div class=space-below></div>
 <div class=article-style></div>
 <div class=article-tags>
-<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/Type-Systems/>Type Systems</a>
 <a class="badge badge-light" href=/bib/tag/Gottesman-Types/>Gottesman Types</a>
 </div>
@@ -161,9 +161,9 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
-<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
 </ul>
 </div>
 </div>
