--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -103,11 +103,11 @@ August 2021
 </span>
 </div>
 <div class="btn-links mb-3">
-<a class="btn btn-outline-primary btn-page-header" href=https://dalspace.library.dal.ca/bitstream/handle/10222/80771/FranciscoRios2021.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rios2021/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header" href=https://dalspace.library.dal.ca/handle/10222/80771 target=_blank rel=noopener>
+URL
 </a>
 </div>
 </div>
@@ -131,6 +131,24 @@ Thesis
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/Quantum-programming-language/>Quantum programming language</a>
+<a class="badge badge-light" href=/bib/tag/Categorical-model/>Categorical model</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-circuit/>Quantum circuit</a>
+<a class="badge badge-light" href=/bib/tag/Proto-Quipper-M/>Proto-Quipper-M</a>
+<a class="badge badge-light" href=/bib/tag/Category-theory/>Category theory</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
+<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></li>
+<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
