--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -145,7 +145,7 @@ Conference paper
 <div class=space-below></div>
 <div class=article-style></div>
 <div class=article-tags>
-<a class="badge badge-light" href=/bib/tag/Formal-Verification/>Formal Verification</a>
+<a class="badge badge-light" href=/bib/tag/Formal-verification/>Formal verification</a>
 <a class="badge badge-light" href=/bib/tag/NISQ/>NISQ</a>
 <a class="badge badge-light" href=/bib/tag/Program-Proof/>Program Proof</a>
 <a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
@@ -157,6 +157,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
 </ul>
 </div>
