--- a/publication/Singhal2020b/index.html
+++ b/publication/Singhal2020b/index.html
@@ -136,10 +136,10 @@ Thesis
 <div class=article-style><p>See also: [<a href=../Singhal2020a>Singhal2020a</a>]</p>
 </div>
 <div class=article-tags>
-<a class="badge badge-light" href=/bib/tag/Formal-Verification/>Formal Verification</a>
+<a class="badge badge-light" href=/bib/tag/Formal-verification/>Formal verification</a>
 <a class="badge badge-light" href=/bib/tag/Program-Proof/>Program Proof</a>
 <a class="badge badge-light" href=/bib/tag/Programming-Languages/>Programming Languages</a>
-<a class="badge badge-light" href=/bib/tag/Quantum-Computing/>Quantum Computing</a>
+<a class="badge badge-light" href=/bib/tag/Quantum-computing/>Quantum computing</a>
 <a class="badge badge-light" href=/bib/tag/Quantum-Computation/>Quantum Computation</a>
 <a class="badge badge-light" href=/bib/tag/Type-Systems/>Type Systems</a>
 <a class="badge badge-light" href=/bib/tag/Type-Theory/>Type Theory</a>
@@ -152,8 +152,8 @@ Thesis
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Rand2020/>Gottesman Types for Quantum Programs</a></li>
-<li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
 </ul>
 </div>
 </div>
