--- a/publication/Yu2021/index.html
+++ b/publication/Yu2021/index.html
@@ -156,6 +156,7 @@ Conference paper
 <ul>
 <li><a href=/bib/publication/Ying2017/>Invariants of Quantum Programs: Characterisations and Generation</a></li>
 <li><a href=/bib/publication/Li2017/>Algorithmic Analysis of Termination Problems for Quantum Programs</a></li>
+<li><a href=/bib/publication/Green2010/>Towards a Formally Verified Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 </ul>
 </div>
