deploy: QuantumPL/site@d2c11a1a3c8859809bad1545ccf611f1e16ebdea

--- a/publication/Rand2020/index.html
+++ b/publication/Rand2020/index.html
@@ -106,14 +106,14 @@ June 2020
 </span>
 </div>
 <div class="btn-links mb-3">
-<a class="btn btn-outline-primary btn-page-header" href=https://people.cs.uchicago.edu/~rand/qpl_2020.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2109.02197 target=_blank rel=noopener>
+arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
 URL
