--- a/publication/Singhal2020a/index.html
+++ b/publication/Singhal2020a/index.html
@@ -110,6 +110,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2109.02198 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header" href=http://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
 URL
 </a>
