--- a/publication/index.html
+++ b/publication/index.html
@@ -707,6 +707,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.15 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.02198 target=_blank rel=noopener>
+arXiv
+</a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=http://ks.cs.uchicago.edu/publication/qhtt/ target=_blank rel=noopener>
 URL
 </a>
@@ -737,14 +740,14 @@ The Heisenberg representation of quantum operators provides a powerful technique
 </div>
 </div>
 <div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://people.cs.uchicago.edu/~rand/qpl_2020.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Rand2020/cite.bib>
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.340.14 target=_blank rel=noopener>
 DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2109.02197 target=_blank rel=noopener>
+arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://rand.cs.uchicago.edu/publication/rand-2020-gottesman/ target=_blank rel=noopener>
 URL
