deploy: QuantumPL/site@4a010025bc0d0434776090b4f80da996056d74b2

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -112,6 +112,12 @@ In this paper, we propose Proq, a runtime assertion scheme for testing and debug
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Sivarajah2020/>t|ket⟩: a retargetable compiler for NISQ devices</a></h2>
+<div class=article-style>
+We present t|ket⟩, a quantum software development platform produced by Cambridge Quantum Computing Ltd. The heart of t|ket⟩ is a language-agnostic optimising compiler designed to generate code for a variety of NISQ devices, which has several features …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Mahmoud2019/>Formalization of Metatheory of the Quipper Quantum Programming Language in a Linear Logic</a></h2>
 <div class=article-style>
 We develop a linear logical framework within the Hybrid system and use it to reason about the type system of a quantum lambda calculus. In particular, we consider a practical version of the calculus called Proto-Quipper, which contains the core of …
