--- a/publication/index.html
+++ b/publication/index.html
@@ -510,6 +510,47 @@ DOI
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Sivarajah2020/>t|ket⟩: a retargetable compiler for NISQ devices</a>
+</div>
+<a href=/bib/publication/Sivarajah2020/ class=summary-link>
+<div class=article-style>
+We present t|ket⟩, a quantum software development platform produced by Cambridge Quantum Computing Ltd. The heart of t|ket⟩ is a …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Seyon-Sivarajah/>Seyon Sivarajah</a></span>, <span>
+<a href=/bib/author/Silas-Dilkes/>Silas Dilkes</a></span>, <span>
+<a href=/bib/author/Alexander-Cowtan/>Alexander Cowtan</a></span>, <span>
+<a href=/bib/author/Will-Simmons/>Will Simmons</a></span>, <span>
+<a href=/bib/author/Alec-Edgington/>Alec Edgington</a></span>, <span>
+<a href=/bib/author/Ross-Duncan/>Ross Duncan</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Sivarajah2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1088/2058-9565/ab8e92 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2003.10611 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/CQCL/pytket target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Li2020/>Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs</a>
 </div>
 <a href=/bib/publication/Li2020/ class=summary-link>
