deploy: QuantumPL/site@f598f2aedd0820ae57c27a766fa30b4ca7252937

--- a/publication/Briegel2009/index.html
+++ b/publication/Briegel2009/index.html
@@ -100,9 +100,9 @@
 <span>
 <a href=/bib/author/H.-J.-Briegel/>H. J. Briegel</a></span>, <span>
 <a href=/bib/author/D.-E.-Browne/>D. E. Browne</a></span>, <span>
-<a href=/bib/author/W.-D%5Cur/>W. D{\"u}r</a></span>, <span>
+<a href=/bib/author/W.-Dur/>W. Dür</a></span>, <span>
 <a href=/bib/author/R.-Raussendorf/>R. Raussendorf</a></span>, <span>
-<a href=/bib/author/M.-Van-den-Nest/>M. {Van den Nest}</a></span>
+<a href=/bib/author/M.-Van-den-Nest/>M. Van den Nest</a></span>
 </div>
 <span class=article-date>
 January 2009
