--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -99,10 +99,10 @@
 <div>
 <span>
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
-<a href=/bib/author/S%5Cebastien-Bardin/>S{\'e}bastien Bardin</a></span>, <span>
-<a href=/bib/author/Fran%5Cc-cois-Bobot/>Fran{\c c}ois Bobot</a></span>, <span>
+<a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
+<a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 <span class=article-date>
 March 2021
