--- a/publication/Heim2020a/index.html
+++ b/publication/Heim2020a/index.html
@@ -101,7 +101,7 @@
 <a href=/bib/author/Bettina-Heim/>Bettina Heim</a></span>, <span>
 <a href=/bib/author/Mathias-Soeken/>Mathias Soeken</a></span>, <span>
 <a href=/bib/author/Sarah-Marshall/>Sarah Marshall</a></span>, <span>
-<a href=/bib/author/Chris-Granade/>Chris Granade</a></span>, <span>
+<a href=/bib/author/Christopher-E.-Granade/>Christopher E. Granade</a></span>, <span>
 <a href=/bib/author/Martin-Roetteler/>Martin Roetteler</a></span>, <span>
 <a href=/bib/author/Alan-Geller/>Alan Geller</a></span>, <span>
 <a href=/bib/author/Matthias-Troyer/>Matthias Troyer</a></span>, <span>
