--- a/publication/Steiger2018/index.html
+++ b/publication/Steiger2018/index.html
@@ -99,7 +99,7 @@
 <div>
 <span>
 <a href=/bib/author/Damian-S.-Steiger/>Damian S. Steiger</a></span>, <span>
-<a href=/bib/author/Thomas-H%5Caner/>Thomas H{\"a}ner</a></span>, <span>
+<a href=/bib/author/Thomas-Haner/>Thomas Häner</a></span>, <span>
 <a href=/bib/author/Matthias-Troyer/>Matthias Troyer</a></span>
 </div>
 <span class=article-date>
