--- a/publication/Svore2018/index.html
+++ b/publication/Svore2018/index.html
@@ -102,7 +102,7 @@
 <a href=/bib/author/Alan-Geller/>Alan Geller</a></span>, <span>
 <a href=/bib/author/Matthias-Troyer/>Matthias Troyer</a></span>, <span>
 <a href=/bib/author/John-Azariah/>John Azariah</a></span>, <span>
-<a href=/bib/author/Christopher-Granade/>Christopher Granade</a></span>, <span>
+<a href=/bib/author/Christopher-E.-Granade/>Christopher E. Granade</a></span>, <span>
 <a href=/bib/author/Bettina-Heim/>Bettina Heim</a></span>, <span>
 <a href=/bib/author/Vadym-Kliuchnikov/>Vadym Kliuchnikov</a></span>, <span>
 <a href=/bib/author/Mariia-Mykhailova/>Mariia Mykhailova</a></span>, <span>
