--- a/publication/index.html
+++ b/publication/index.html
@@ -318,10 +318,10 @@ While recent progress in quantum hardware open the door for significant speedup 
 <div>
 <span>
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
-<a href=/bib/author/S%5Cebastien-Bardin/>S{\'e}bastien Bardin</a></span>, <span>
-<a href=/bib/author/Fran%5Cc-cois-Bobot/>Fran{\c c}ois Bobot</a></span>, <span>
+<a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
+<a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -422,7 +422,7 @@ Quantum programming languages are essential to translate ideas into instructions
 <a href=/bib/author/Bettina-Heim/>Bettina Heim</a></span>, <span>
 <a href=/bib/author/Mathias-Soeken/>Mathias Soeken</a></span>, <span>
 <a href=/bib/author/Sarah-Marshall/>Sarah Marshall</a></span>, <span>
-<a href=/bib/author/Chris-Granade/>Chris Granade</a></span>, <span>
+<a href=/bib/author/Christopher-E.-Granade/>Christopher E. Granade</a></span>, <span>
 <a href=/bib/author/Martin-Roetteler/>Martin Roetteler</a></span>, <span>
 <a href=/bib/author/Alan-Geller/>Alan Geller</a></span>, <span>
 <a href=/bib/author/Matthias-Troyer/>Matthias Troyer</a></span>, <span>
@@ -670,10 +670,10 @@ While recent progress in quantum hardware open the door for significant speedup 
 <div>
 <span>
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
-<a href=/bib/author/S%5Cebastien-Bardin/>S{\'e}bastien Bardin</a></span>, <span>
-<a href=/bib/author/Fran%5Cc-cois-Bobot/>Fran{\c c}ois Bobot</a></span>, <span>
+<a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
+<a href=/bib/author/Francois-Bobot/>François Bobot</a></span>, <span>
 <a href=/bib/author/Valentin-Perrelle/>Valentin Perrelle</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -815,7 +815,7 @@ Inductive datatypes in programming languages allow users to define useful data s
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Romain-P%5Cechoux/>Romain P{\'e}choux</a></span>, <span>
+<a href=/bib/author/Romain-Pechoux/>Romain Péchoux</a></span>, <span>
 <a href=/bib/author/Simon-Perdrix/>Simon Perdrix</a></span>, <span>
 <a href=/bib/author/Mathys-Rennela/>Mathys Rennela</a></span>, <span>
 <a href=/bib/author/Vladimir-Zamdzhiev/>Vladimir Zamdzhiev</a></span>
@@ -1570,7 +1570,7 @@ One perspective on quantum algorithms is that they are classical algorithms havi
 <div>
 <span>
 <a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>
 </div>
 </div>
@@ -1668,7 +1668,7 @@ Quantum computing exploits quantum phenomena such as superposition and entanglem
 <a href=/bib/author/Alan-Geller/>Alan Geller</a></span>, <span>
 <a href=/bib/author/Matthias-Troyer/>Matthias Troyer</a></span>, <span>
 <a href=/bib/author/John-Azariah/>John Azariah</a></span>, <span>
-<a href=/bib/author/Christopher-Granade/>Christopher Granade</a></span>, <span>
+<a href=/bib/author/Christopher-E.-Granade/>Christopher E. Granade</a></span>, <span>
 <a href=/bib/author/Bettina-Heim/>Bettina Heim</a></span>, <span>
 <a href=/bib/author/Vadym-Kliuchnikov/>Vadym Kliuchnikov</a></span>, <span>
 <a href=/bib/author/Mariia-Mykhailova/>Mariia Mykhailova</a></span>, <span>
@@ -1738,7 +1738,7 @@ We introduce ProjectQ, an open source software effort for quantum computing. The
 <div>
 <span>
 <a href=/bib/author/Damian-S.-Steiger/>Damian S. Steiger</a></span>, <span>
-<a href=/bib/author/Thomas-H%5Caner/>Thomas H{\"a}ner</a></span>, <span>
+<a href=/bib/author/Thomas-Haner/>Thomas Häner</a></span>, <span>
 <a href=/bib/author/Matthias-Troyer/>Matthias Troyer</a></span>
 </div>
 </div>
@@ -2097,7 +2097,7 @@ We propose a notion of quantum control in a quantum programming language which p
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Costin-B%5Cu-adescu/>Costin B{\u a}descu</a></span>, <span>
+<a href=/bib/author/Costin-Badescu/>Costin Bădescu</a></span>, <span>
 <a href=/bib/author/Prakash-Panangaden/>Prakash Panangaden</a></span>
 </div>
 </div>
@@ -2158,7 +2158,7 @@ The Quipper language offers a unified general-purpose programming framework for 
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
 <a href=/bib/author/D.-Scott-Alexander/>D. Scott Alexander</a></span>, <span>
@@ -2192,7 +2192,7 @@ We present ScaffCC, a scalable compilation and analysis framework based on LLVM 
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali {Javadi-Abhari}</a></span>, <span>
+<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
 <a href=/bib/author/Shruti-Patil/>Shruti Patil</a></span>, <span>
 <a href=/bib/author/Daniel-Kudrow/>Daniel Kudrow</a></span>, <span>
 <a href=/bib/author/Jeff-Heckey/>Jeff Heckey</a></span>, <span>
@@ -2394,7 +2394,7 @@ Quipper is a recently developed programming language for expressing quantum comp
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2431,7 +2431,7 @@ The field of quantum algorithms is vibrant. Still, there is currently a lack of 
 <a href=/bib/author/Peter-LeFanu-Lumsdaine/>Peter LeFanu Lumsdaine</a></span>, <span>
 <a href=/bib/author/Neil-J.-Ross/>Neil J. Ross</a></span>, <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2464,7 +2464,7 @@ Quantum computing is of significant research interest because of its potential t
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali {Javadi-Abhari}</a></span>, <span>
+<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
 <a href=/bib/author/Arvin-Faruque/>Arvin Faruque</a></span>, <span>
 <a href=/bib/author/Mohammad-Javad-Dousti/>Mohammad Javad Dousti</a></span>, <span>
 <a href=/bib/author/Lukas-Svec/>Lukas Svec</a></span>, <span>
@@ -2763,7 +2763,7 @@ We discuss the design of a typed lambda calculus for quantum computation. After 
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2897,9 +2897,9 @@ Quantum computation offers a promising new kind of information processing, where
 <span>
 <a href=/bib/author/H.-J.-Briegel/>H. J. Briegel</a></span>, <span>
 <a href=/bib/author/D.-E.-Browne/>D. E. Browne</a></span>, <span>
-<a href=/bib/author/W.-D%5Cur/>W. D{\"u}r</a></span>, <span>
+<a href=/bib/author/W.-Dur/>W. Dür</a></span>, <span>
 <a href=/bib/author/R.-Raussendorf/>R. Raussendorf</a></span>, <span>
-<a href=/bib/author/M.-Van-den-Nest/>M. {Van den Nest}</a></span>
+<a href=/bib/author/M.-Van-den-Nest/>M. Van den Nest</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2998,7 +2998,7 @@ The present article gives an introductory overview of the novel field of quantum
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Roland-R%5Cudiger/>Roland R{\"u}diger</a></span>
+<a href=/bib/author/Roland-Rudiger/>Roland Rüdiger</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -3096,7 +3096,7 @@ In this paper we develop a functional programming language for quantum computers
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -3332,7 +3332,7 @@ Describes QCL
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/Bernhard-%5COmer/>Bernhard {\"O}mer</a></span>
+<a href=/bib/author/Bernhard-Omer/>Bernhard Ömer</a></span>
 </div>
 </div>
 <div class=btn-links>
