--- a/publication/Sabry2018/index.html
+++ b/publication/Sabry2018/index.html
@@ -99,7 +99,7 @@
 <div>
 <span>
 <a href=/bib/author/Amr-Sabry/>Amr Sabry</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>, <span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Juliana-Kaizer-Vizzotto/>Juliana Kaizer Vizzotto</a></span>
 </div>
 <span class=article-date>
