--- a/publication/Selinger2006/index.html
+++ b/publication/Selinger2006/index.html
@@ -99,7 +99,7 @@
 <div>
 <span>
 <a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>, <span>
-<a href=/bib/author/Beno%5Cit-Valiron/>Beno{\^i}t Valiron</a></span>
+<a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>
 </div>
 <span class=article-date>
 June 2006
