deploy: QuantumPL/site@fb812eb34c8dc511658b15144d08da7f3872a325

--- a/publication/Rand2016/index.html
+++ b/publication/Rand2016/index.html
@@ -103,6 +103,9 @@
 <span class=article-date>
 March 2016
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Survey/>Survey</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rand2016/cite.bib>
