--- a/publication/Heim2020a/index.html
+++ b/publication/Heim2020a/index.html
@@ -110,6 +110,9 @@
 <span class=article-date>
 December 2020
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Survey/>Survey</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Heim2020a/cite.bib>
