--- a/publication/Ruediger2007/index.html
+++ b/publication/Ruediger2007/index.html
@@ -103,6 +103,9 @@
 <span class=article-date>
 March 2007
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Survey/>Survey</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Ruediger2007/cite.bib>
