deploy: QuantumPL/site@eb3c36d643241d7d79362fae877e6b0380f0c995

--- a/publication/Amy2019a/index.html
+++ b/publication/Amy2019a/index.html
@@ -103,6 +103,9 @@
 <span class=article-date>
 February 2019
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Amy2019a/cite.bib>
@@ -146,7 +149,7 @@ Thesis
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 <li><a href=/bib/publication/Singhal2020b/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
-<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
+<li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 </ul>
 </div>
 </div>
