--- a/publication/Rand2018a/index.html
+++ b/publication/Rand2018a/index.html
@@ -105,7 +105,7 @@ November 2018
 </span>
 <span class=middot-divider></span>
 <span class=article-categories>
-<i class="fas fa-folder mr-1"></i><a href=/bib/category/Survey/>Survey</a></span>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/Survey/>Survey</a>, <a href=/bib/category/PhD-Thesis/>PhD Thesis</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rand2018a/cite.bib>
