--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -103,6 +103,9 @@
 <span class=article-date>
 August 2021
 </span>
+<span class=middot-divider></span>
+<span class=article-categories>
+<i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a></span>
 </div>
 <div class="btn-links mb-3">
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Rios2021/cite.bib>
