--- a/404.html
+++ b/404.html
@@ -98,6 +98,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Chareton2021a/>Formal Methods for Quantum Programs: A Survey</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/post/>Latest News</a></li>
 <li><a href=/bib/post/gh-org-ui/>GitHub Org and Better UI</a></li>
@@ -106,7 +107,6 @@
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
 <li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
-<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
