deploy: QuantumPL/site@c356ab69c2078e7850c10a2cd05cc62039566eef

--- a/404.html
+++ b/404.html
@@ -105,8 +105,8 @@
 <li><a href=/bib/publication/Zhou2021/>A Quantum Interpretation of Bunched Logic & Quantum Separation Logic</a></li>
 <li><a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a></li>
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
+<li><a href=/bib/publication/Bordg2021/>Certified Quantum Computation in Isabelle/HOL</a></li>
 <li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
-<li><a href=/bib/publication/Ying2021/>Model Checking Quantum Systems: Principles and Algorithms</a></li>
 </ul>
 </div>
 </div>
