--- a/publication-type/6/index.html
+++ b/publication-type/6/index.html
@@ -125,6 +125,12 @@ We discuss the design of a typed lambda calculus for quantum computation. After 
 The quantum IO monad is a purely functional interface to quantum programming implemented as a Haskell library. At the same time it provides a constructive semantics of quantum programming. The QIO monad separates reversible (i.e., unitary) and …
 </div>
 </div>
+<div>
+<h2><a href=/bib/publication/Abramsky2008/>Categorical Quantum Mechanics</a></h2>
+<div class=article-style>
+This invited chapter in the Handbook of Quantum Logic and Quantum Structures consists of two parts: 1. A substantially updated version of quant-ph/0402130 by the same authors, which initiated the area of categorical quantum mechanics, but had not yet …
+</div>
+</div>
 </div>
 </div>
 <div class=page-footer>
