--- a/publication/index.html
+++ b/publication/index.html
@@ -338,6 +338,41 @@ URL
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Bordg2021/>Certified Quantum Computation in Isabelle/HOL</a>
+</div>
+<a href=/bib/publication/Bordg2021/ class=summary-link>
+<div class=article-style>
+In this article we present an ongoing effort to formalise quantum algorithms and results in quantum information theory using the proof …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Anthony-Bordg/>Anthony Bordg</a></span>, <span>
+<a href=/bib/author/Hanna-Lachnitt/>Hanna Lachnitt</a></span>, <span>
+<a href=/bib/author/Yijun-He/>Yijun He</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Bordg2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/s10817-020-09584-7 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/AnthonyBordg/Isabelle_marries_Dirac target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2021">
 <div class="media stream-item">
 <div class=media-body>
@@ -2149,6 +2184,38 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2015">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Boender2015/>Formalization of Quantum Protocols using Coq</a>
+</div>
+<a href=/bib/publication/Boender2015/ class=summary-link>
+<div class=article-style>
+Quantum Information Processing, which is an exciting area of research at the intersection of physics and computer science, has great …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Jaap-Boender/>Jaap Boender</a></span>, <span>
+<a href=/bib/author/Florian-Kammuller/>Florian Kammüller</a></span>, <span>
+<a href=/bib/author/Rajagopal-Nagarajan/>Rajagopal Nagarajan</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Boender2015/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.4204/EPTCS.195.6 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2015">
 <div class="media stream-item">
 <div class=media-body>
@@ -2277,6 +2344,36 @@ PDF
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/2676726.2676999 target=_blank rel=noopener>
+DOI
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2014">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Backens2014/>The ZX-calculus is complete for stabilizer quantum mechanics</a>
+</div>
+<a href=/bib/publication/Backens2014/ class=summary-link>
+<div class=article-style>
+The ZX-calculus is a graphical calculus for reasoning about quantum systems and processes. It is known to be universal for pure state …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Miriam-Backens/>Miriam Backens</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Backens2014/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1088/1367-2630/16/9/093021 target=_blank rel=noopener>
 DOI
 </a>
 </div>
@@ -2945,6 +3042,40 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0910.1116 target=_blank rel=noopener>
+arXiv
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-6 year-2008">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Abramsky2008/>Categorical Quantum Mechanics</a>
+</div>
+<a href=/bib/publication/Abramsky2008/ class=summary-link>
+<div class=article-style>
+This invited chapter in the Handbook of Quantum Logic and Quantum Structures consists of two parts: 1. A substantially updated version …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Samson-Abramsky/>Samson Abramsky</a></span>, <span>
+<a href=/bib/author/Bob-Coecke/>Bob Coecke</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Abramsky2008/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1016/B978-0-444-52869-8.50010-4 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/0808.1023 target=_blank rel=noopener>
 arXiv
 </a>
 </div>
