--- a/index.html
+++ b/index.html
@@ -195,6 +195,29 @@ arXiv
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Anthony-Bordg/>Anthony Bordg</a></span>, <span>
+<a href=/bib/author/Hanna-Lachnitt/>Hanna Lachnitt</a></span>, <span>
+<a href=/bib/author/Yijun-He/>Yijun He</a></span>
+</span>
+(2021).
+<a href=/bib/publication/Bordg2021/>Certified Quantum Computation in Isabelle/HOL</a>.
+<em>Journal of Automated Reasoning</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Bordg2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1007/s10817-020-09584-7 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/AnthonyBordg/Isabelle_marries_Dirac target=_blank rel=noopener>
+URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
 <a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
 <a href=/bib/author/Shih-Han-Hung/>Shih-Han Hung</a></span>, <span>
@@ -213,28 +236,6 @@ DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/inQWIRE/SQIR target=_blank rel=noopener>
 URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Nengkun-Yu/>Nengkun Yu</a></span>, <span>
-<a href=/bib/author/Jens-Palsberg/>Jens Palsberg</a></span>
-</span>
-(2021).
-<a href=/bib/publication/Yu2021/>Quantum Abstract Interpretation</a>.
-<em>Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=http://web.cs.ucla.edu/~palsberg/paper/pldi21-quantum.pdf target=_blank rel=noopener>
-PDF
-</a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yu2021/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3453483.3454061 target=_blank rel=noopener>
-DOI
 </a>
 </p>
 </div>
@@ -289,14 +290,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/Formal-verification/ style=font-size:1.7842568972904107rem>Formal verification</a>
-<a href=/bib/tag/Pre-and-Postconditions/ style=font-size:.7rem>Pre- and Postconditions</a>
-<a href=/bib/tag/Program-Proof/ style=font-size:1.1797913203571053rem>Program Proof</a>
-<a href=/bib/tag/Program-Specifications/ style=font-size:.7rem>Program Specifications</a>
-<a href=/bib/tag/Programming-Languages/ style=font-size:1.5202086796428946rem>Programming Languages</a>
-<a href=/bib/tag/Quantum-computing/ style=font-size:1.7842568972904107rem>Quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.5202086796428946rem>quantum programming</a>
-<a href=/bib/tag/Type-Systems/ style=font-size:1.1797913203571053rem>Type Systems</a>
+<a href=/bib/tag/Formal-verification/ style=font-size:1.658055272416068rem>Formal verification</a>
+<a href=/bib/tag/Program-Proof/ style=font-size:.7rem>Program Proof</a>
+<a href=/bib/tag/Programming-Languages/ style=font-size:1.239548749062497rem>Programming Languages</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:1.658055272416068rem>Quantum computing</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:.7rem>Quantum computing</a>
+<a href=/bib/tag/Quantum-computing/ style=font-size:.7rem>Quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.239548749062497rem>quantum programming</a>
+<a href=/bib/tag/Type-Systems/ style=font-size:.7rem>Type Systems</a>
 </div>
 </div>
 </div>
