--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -258,6 +258,12 @@ This paper introduces QWIRE (``choir''), a language for defining quantum circuit
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Boender2015/>Formalization of Quantum Protocols using Coq</a></h2>
+<div class=article-style>
+Quantum Information Processing, which is an exciting area of research at the intersection of physics and computer science, has great potential for influencing the future development of information processing systems. The building of practical, …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Badescu2015/>Quantum Alternation: Prospects and Problems</a></h2>
 <div class=article-style>
 We propose a notion of quantum control in a quantum programming language which permits the superposition of finitely many quantum operations without performing a measurement. This notion takes the form of a conditional construct similar to the IF …
