deploy: QuantumPL/site@88b0818c997414af6afd129be760cbdf3c7cf4a8

--- a/publication/Rand2019/index.html
+++ b/publication/Rand2019/index.html
@@ -100,7 +100,7 @@
 <span>
 <a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
 <a href=/bib/author/Jennifer-Paykin/>Jennifer Paykin</a></span>, <span>
-<a href=/bib/author/Dong-Ho-Lee/>Dong-Ho Lee</a></span>, <span>
+<a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
 <a href=/bib/author/Steve-Zdancewic/>Steve Zdancewic</a></span>
 </div>
 <span class=article-date>
