--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Quickly discover relevant papers by <a href=./publication/>filtering publication
 <span>
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
-<a href=/bib/author/Dong-Ho-Lee/>Dong-Ho Lee</a></span>, <span>
+<a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
 <a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
