--- a/publication/index.html
+++ b/publication/index.html
@@ -181,7 +181,7 @@ While recent progress in quantum hardware open the door for significant speedup 
 <span>
 <a href=/bib/author/Christophe-Chareton/>Christophe Chareton</a></span>, <span>
 <a href=/bib/author/Sebastien-Bardin/>Sébastien Bardin</a></span>, <span>
-<a href=/bib/author/Dong-Ho-Lee/>Dong-Ho Lee</a></span>, <span>
+<a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
 <a href=/bib/author/Benoit-Valiron/>Benoît Valiron</a></span>, <span>
 <a href=/bib/author/Renaud-Vilmart/>Renaud Vilmart</a></span>, <span>
 <a href=/bib/author/Zhaowei-Xu/>Zhaowei Xu</a></span>
@@ -1418,7 +1418,7 @@ Common quantum algorithms make heavy use of ancillae: scratch qubits that are in
 <span>
 <a href=/bib/author/Robert-Rand/>Robert Rand</a></span>, <span>
 <a href=/bib/author/Jennifer-Paykin/>Jennifer Paykin</a></span>, <span>
-<a href=/bib/author/Dong-Ho-Lee/>Dong-Ho Lee</a></span>, <span>
+<a href=/bib/author/Dongho-Lee/>Dongho Lee</a></span>, <span>
 <a href=/bib/author/Steve-Zdancewic/>Steve Zdancewic</a></span>
 </div>
 </div>
